# ciis_drone

./: CMakeLists.txt  README.md  package.xml
Data Terbang/data/: 04_40_31_actuator_armed_0.csv  04_40_31_actuator_controls_0_0.csv  04_40_31_actuator_controls_3_0.csv  04_40_31_actuator_outputs_0.csv  04_40_31_actuator_outputs_1.csv  04_40_31_battery_status_0.csv  04_40_31_commander_state_0.csv  04_40_31_cpuload_0.csv  04_40_31_ekf_gps_drift_0.csv  04_40_31_estimator_innovation_test_ratios_0.csv  04_40_31_estimator_innovation_variances_0.csv  04_40_31_estimator_innovations_0.csv  04_40_31_estimator_sensor_bias_0.csv  04_40_31_estimator_states_0.csv  04_40_31_estimator_status_0.csv  04_40_31_estimator_status_flags_0.csv  04_40_31_home_position_0.csv  04_40_31_hover_thrust_estimate_0.csv  04_40_31_input_rc_0.csv  04_40_31_logger_status_0.csv  04_40_31_manual_control_setpoint_0.csv  04_40_31_manual_control_switches_0.csv  04_40_31_multirotor_motor_limits_0.csv  04_40_31_px4io_status_0.csv  04_40_31_rate_ctrl_status_0.csv  04_40_31_rtl_flight_time_0.csv  04_40_31_safety_0.csv  04_40_31_sensor_accel_0.csv  04_40_31_sensor_accel_1.csv  04_40_31_sensor_baro_0.csv  04_40_31_sensor_combined_0.csv  04_40_31_sensor_gps_0.csv  04_40_31_sensor_gyro_0.csv  04_40_31_sensor_gyro_1.csv  04_40_31_sensor_mag_0.csv  04_40_31_sensor_mag_1.csv  04_40_31_sensor_preflight_mag_0.csv  04_40_31_sensors_status_imu_0.csv  04_40_31_system_power_0.csv  04_40_31_takeoff_status_0.csv  (+25 more)
Model/: NN1.h5  NN2.h5  NN3.h5  NN4.h5  NN5.h5  NN6.h5  NN_IV_1_new3.h5  NN_IV_2_new3.h5  NN_IV_3_new3.h5  NN_IV_4_new3.h5  NN_IV_5_new3.h5  NN_IV_6_new3.h5
include/: Copter_Ciis.h
launch/: verticalTOF.launch
msg/: Motor.msg
scripts/: controller.py
src/: Copter_Ciis.cpp  vertical_drone_run.cpp
